--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">HyTeProject</string>
+    <string name="submit">Submit</string>
+    <string name="amount_of_calories">Amount of calories</string>
+    <string name="food_name">Food name</string>
 </resources>
