- Initial setup - Added Food Diary settings in xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">HyTeProject</string>
+    <string name="food_diary">Food Diary</string>
+    <string name="target">Calorie target</string>
 </resources>
