--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="submit">Submit</string>
     <string name="amount_of_calories">Amount of calories</string>
     <string name="food_name">Food name</string>
+    <string name="yesterdays_calories">Yesterdays calories</string>
 </resources>
