- Added and configured activity_settings.xml - Added back buttons to activity_settings.xml and activity_food_diary.xml - Tweaked activity_main.xml layout - Improved strings.xml names

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,17 +4,25 @@
     <string name="amount_of_calories">Amount of calories</string>
     <string name="food_name">Food name</string>
     <string name="yesterdays_calories">Yesterdays calories</string>
-    <string name="ListRemovalText">Tap an item to remove it from the list</string>
+    <string name="listRemovalText">Tap an item to remove it from the list</string>
     <string name="steps">0</string>
-    <string name="yourW">Your Weight</string>
-    <string name="yourH">Your Height</string>
-    <string name="kilo">Type here (kg)</string>
-    <string name="centim">Type here (cm)</string>
-    <string name="bmica">BMI Calculator</string>
-    <string name="calcu">Calculate</string>
-    <string name="yourbmi"></string>
+    <string name="your_weight">Your Weight</string>
+    <string name="your_height">Your Height</string>
+    <string name="weight_input">Type here (kg)</string>
+    <string name="height_input">Type here (cm)</string>
+    <string name="bmi_calculator">BMI Calculator</string>
+    <string name="calculate">Calculate</string>
+    <string name="calculatedBmi"></string>
     <string name="textViewStepsText">Steps today</string>
     <string name="settings_button">Settings button</string>
     <string name="food_diary">Food diary</string>
     <string name="go_to_food_diary">Go to food diary</string>
+    <string name="step_target">Step target</string>
+    <string name="step_counter">Step counter</string>
+    <string name="calorie_target">Calorie traget</string>
+    <string name="theme">Theme</string>
+    <string name="theme1">Theme1</string>
+    <string name="theme2">Theme2</string>
+    <string name="theme3">Theme3</string>
+    <string name="back_to_menu">Back to menu</string>
 </resources>
