--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="back_to_menu">Back to menu</string>
     <string name="metric">Metric</string>
     <string name="imperial">Imperial</string>
+    <string name="your_target">Your target:</string>
 </resources>
