--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="metric">Metric</string>
     <string name="imperial">Imperial</string>
     <string name="your_target">Your target:</string>
+    <string name="reset_button">Reset count</string>
 </resources>
